Added template view

--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -121,7 +121,7 @@
                 justify-content: space-between;
                 align-items: center;">
                   {{template.displayName}} <mat-icon  class="edit-icon"
-                    style="z-index: 1001;" (click)="openModal(); selectedTemplateName = template.templateName; templateName = template.templateNam">edit
+                    style="z-index: 1001;" (click)="openModal(); selectedTemplateName = template.templateName; templateName = template.templateName">edit
                   </mat-icon>
                 </span>
 
