--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -50,10 +50,12 @@
     <div class="movil">
 
       <div class="menu-container">
-        <div class="menu-item-Light  directionProjectList" [ngClass]=""(click)="navigateTo('dashboard')">
+        <div class="menu-item-Light  directionProjectList" [ngClass]="" (click)="navigateTo('dashboard')">
           <i class="bi bi-list-task"></i> Project List
         </div>
-        <div class="menu-item-Dark" [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}" style="justify-content: flex-start;" (click)="navigateTo('project-information')">
+        <div class="menu-item-Dark"
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"
+          style="justify-content: flex-start;" (click)="navigateTo('project-information')">
           <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
           <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
@@ -95,14 +97,20 @@
         <div class="menu-item-Dark directionProjectList" (click)="navigateTo('dashboard')">
           <i class="bi bi-list-task"></i> Project List
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"  (click)="navigateTo('project-information')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"
+          (click)="navigateTo('project-information')">
           Project Information
         </div>
 
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC', 'menu-item-Dark': selectedMenuItem !== 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC'}"  (click)="navigateTo('bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC', 'menu-item-Dark': selectedMenuItem !== 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC'}"
+          (click)="navigateTo('bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC')">
           Survey Creation & Design
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants', 'menu-item-Dark': selectedMenuItem !== 'participants'}" (click)="navigateTo('participants')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants', 'menu-item-Dark': selectedMenuItem !== 'participants'}"
+          (click)="navigateTo('participants')">
           Participants
           <div class="video-container">
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
@@ -112,7 +120,9 @@
             </button>
           </div>
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants-emails', 'menu-item-Dark': selectedMenuItem !== 'participants-emails'}" (click)="navigateTo('participants-emails')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants-emails', 'menu-item-Dark': selectedMenuItem !== 'participants-emails'}"
+          (click)="navigateTo('participants-emails')">
           Survey Participants/Email <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
@@ -121,7 +131,9 @@
             </button>
           </div>
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}" (click)="navigateTo('reports')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}"
+          (click)="navigateTo('reports')">
           Reports <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
@@ -138,6 +150,9 @@
         <i class="bi bi-arrow-left-circle"></i>
         BACK
       </div> -->
+        <div class="menu-item-Dark directionProjectList" (click)="navigateTo('templates')">
+          <i class="bi bi-list-task"></i>Templates
+        </div>
       </div>
     </div>
   </div>
