--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -157,10 +157,11 @@
     </div>
   </div>
 
-  <button class="no-print" *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;" (click)="toggleMenu()"
-    mat-icon-button matTooltip="preview" matTooltipPosition="above">
-    <mat-icon class="full-icon" style="font-size: 35px;">visibility
+  <button class="hide-button" *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView"
+    
+  (click)="toggleMenu()"
+    mat-icon-button matTooltip="Hide menu" matTooltipPosition="above">
+    <mat-icon class="full-icon" style="font-size: 35px;margin-bottom: 7px;">arrow_back
     </mat-icon>
   </button>
 </div>
