--- a/src/app/bmx/components/menu/menu.component.scss
+++ b/src/app/bmx/components/menu/menu.component.scss
@@ -19,11 +19,13 @@
   gap: 1px;
   font-family: Arial, sans-serif;
   margin-left: -8px;
-  box-shadow: 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12), 0 3px 5px -1px rgba(0,0,0,.2);
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
   height: 76px;
   justify-content: center;
   padding: 10px;
+  position: relative;
+  z-index: 10;
 }
 .button-menu{
 width: 87%!important;
@@ -310,3 +312,14 @@ width: 87%!important;
 //       top: 5%;
 //   }
 // }
+
+.hide-button{
+  position: absolute;
+  top: 20px;
+  left: 233px;
+  outline: none; 
+  background-color: white;
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px;
+  display: flex;
+}
