--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -10,7 +10,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content style="overflow-y: hidden;">
-    <div class="container">
+    <div class="container" style="    max-width: 1500px;"> 
 
       <!-- MENU ICON -->
       <div fxLayout="row" fxLayoutAlign="center center">
