--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -122,7 +122,7 @@
 
 .slide-box {
   width: 900px;
-  height: 720px;
+  height: 679px;
   border: solid 4px lightgray;
   border-radius: 6px;
   background-repeat: no-repeat !important;
@@ -135,9 +135,8 @@
 }
 
 .slide-box-wide {
-  width: 1100px;
-  /* Set the desired width */
-  height: 720px;
+  width: 1237px;
+  height: 679px;
   /* Keep the height the same as in the original class */
   border: solid 4px lightgray;
   border-radius: 6px;
@@ -823,7 +822,7 @@ mat-tab-group ::-webkit-scrollbar {
   position: relative;
   top: 469px;
   z-index: 99;
-  left: 99px;
+  left: 37px;
   outline: none;
 
   :hover {
@@ -835,10 +834,11 @@ mat-tab-group ::-webkit-scrollbar {
 
 .menu-right-icon {
   position: relative;
-  left: 1163px;
-  top: 470px;
+  left: 1215px;
+  /* top: 470px; */
   z-index: 99;
   outline: none;
+  transform: translate(50%, -240px );
 
   :hover {
     transform: scale(1.5);
@@ -847,10 +847,11 @@ mat-tab-group ::-webkit-scrollbar {
 
 .menu-right-icon-wide {
   position: relative;
-  left: 1260px;
-  top: 470px;
+  right: -1376px;
+  /* top: 473px; */
   z-index: 99;
   outline: none;
+  transform: translate(50%, -240px );
 
   :hover {
     transform: scale(1.5);
