--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -53,7 +53,7 @@
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon"> text_fields</mat-icon>
         </button>
-        <button (click)="selectedIndex = i" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
+        <button (click)="selectedIndex = i; verifyCritera() " class="add-column" matTooltip="insert test names" matTooltipPosition="above"
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
@@ -91,7 +91,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
             <div style="display: flex; justify-content: center; align-items: center;">
                 <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
                     <mat-label>Copy & Paste TEST NAMES</mat-label>
-                    <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
+                    <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"
                         placeholder="Paste test names here" cdkTextareaAutosize cdkAutosizeMinRows="2"
                         cdkAutosizeMaxRows="5"></textarea>
                     <mat-hint>Type or paste the test names here that you want to include</mat-hint>
