--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
-    [dialogText]="dialogText"></app-survey-dialog>
+        [dialogText]="dialogText"></app-survey-dialog>
 </div>
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
@@ -106,8 +106,8 @@
             <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="openDialog('undo');editSingleTableCells = false" class="add-column" matTooltip="undo last change"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <button (click)="openDialog('undo');editSingleTableCells = false" class="add-column"
+                matTooltip="undo last change" matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
             </button>
             <button (click)="selectedIndex = '';editSingleTableCells = false" class="add-column" matTooltip="cancel"
@@ -156,14 +156,19 @@
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
         <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox();editSingleTableCells = false"
-            class="add-column" matTooltip="uploadImages" matTooltipPosition="above" mat-icon-button
+            class="add-column" matTooltip="upload Images" matTooltipPosition="above" mat-icon-button
             aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-        <button (click)="selectedIndex = i;editSingleTableCells = false" class="add-column"
+        <button (click)="selectedIndex = i;editSingleTableCells = false; verifyCritera()" class="add-column"
             matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
+        <button  (click)="toggleImageUploadBox()" class="add-column" matTooltip="uploadImages"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
+        </button>
+
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -176,8 +181,8 @@
 
     <div class="example-handle" cdkDragHandle style="display: flex;
 flex-direction: row;
-justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px"
-            fill="currentColor" viewBox="0 0 24 24">
+justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24px" fill="currentColor"
+            viewBox="0 0 24 24">
             <path
                 d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
             </path>
@@ -198,8 +203,8 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
                     <mat-label>Copy & Paste TEST NAMES</mat-label>
                     <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-                        placeholder="Paste test names here" cdkTextareaAutosize cdkAutosizeMinRows="2"
-                        cdkAutosizeMaxRows="5"></textarea>
+                        (ngModelChange)="upLoadNamesAndRationales(testNamesInput)" placeholder="Paste test names here"
+                        cdkTextareaAutosize cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
                     <mat-hint>Type or paste the test names here that you want to include</mat-hint>
                 </mat-form-field>
             </div>
@@ -208,59 +213,63 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     </mat-card>
     <br>
-<!-- Cards Criteria-->
-<mat-card class="example-card">
-  <mat-card-header>
-      <mat-card-title>Category</mat-card-title>
-  </mat-card-header>
-  <br>
-  <div class="sm-section2-rkScale">
-      <div class="sm-column-box-rkScale">
-          <mat-form-field appearance="outline" style="width: 40%">
-              <mat-label>Category Name</mat-label>
-              <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
-                  style="font-size: 20px;color: #324395;">
-              <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
-          </mat-form-field>
+    <!-- Cards Criteria-->
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>Category</mat-card-title>
+        </mat-card-header>
+        <br>
+        <div class="sm-section2-rkScale">
+            <div class="sm-column-box-rkScale">
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Category Name</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
+                        style="font-size: 20px;color: #324395;">
+                    <mat-hint>Enter the name of the category</mat-hint> <!-- Hint text for Category Name -->
+                </mat-form-field>
 
-          <mat-form-field appearance="outline" style="width: 40%">
-              <mat-label>Sub category Description</mat-label>
-              <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-                  placeholder="Sub category Description" style="font-size: 20px;color: #ee7f25;">
-              <mat-hint>Enter a brief description of the Sub category </mat-hint>
-              <!-- Hint text for Category Description -->
-          </mat-form-field>
-      </div>
-      <br>
-      <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
-      <div class="sm-row-box-rkScale">
-        <div>
-            <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
-                    {{bmxItem.componentSettings[0].minRule}}</div>
-                <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
-                    style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+                <mat-form-field appearance="outline" style="width: 40%">
+                    <mat-label>Sub category Description</mat-label>
+                    <input matInput [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
+                        placeholder="Sub category Description" style="font-size: 20px;color: #ee7f25;">
+                    <mat-hint>Enter a brief description of the Sub category </mat-hint>
+                    <!-- Hint text for Category Description -->
+                </mat-form-field>
             </div>
-            <div style="font-size: 13px;color: #48535e;">Min Number Of Questions To Answer</div>
-        </div>
-        <div>
-            <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
-                    {{bmxItem.componentSettings[0].maxRule}}</div>
-                <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
-                    style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+            <br>
+            <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+            <div class="sm-row-box-rkScale">
+                <div>
+                    <div
+                        style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                            {{bmxItem.componentSettings[0].minRule}}</div>
+                        <input type="number" min="0" [max]="rowsCount"
+                            [(ngModel)]="bmxItem.componentSettings[0].minRule" style="width:53px; padding: 0px 10px;"
+                            [value]="bmxItem.componentSettings[0].minRule">
+                    </div>
+                    <div style="font-size: 13px;color: #48535e;">Min Number Of Questions To Answer</div>
+                </div>
+                <div>
+                    <div
+                        style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                            {{bmxItem.componentSettings[0].maxRule}}</div>
+                        <input type="number" min="0" [max]="rowsCount"
+                            [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
+                            [value]="bmxItem.componentSettings[0].maxRule">
+                    </div>
+                    <div style="font-size: 13px;color: #48535e;">Max Number Of Questions To Answer</div>
+                </div>
             </div>
-            <div style="font-size: 13px;color: #48535e;">Max Number Of Questions To Answer</div>
+
         </div>
-    </div>
+        <mat-card-content>
 
-  </div>
-  <mat-card-content>
+        </mat-card-content>
 
-  </mat-card-content>
-
-</mat-card>
-<br>
+    </mat-card>
+    <br>
     <!-- Cards Select Ranking-->
     <mat-card class="example-card">
         <mat-card-header>
@@ -276,7 +285,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             <mat-form-field style="flex: 1; width: 100%;" appearance="outline">
                                 <mat-label>New Criteria</mat-label>
                                 <input matInput [(ngModel)]="newCriteria" style="font-size: 12px;">
-                                <mat-hint>Enter a criteria  and click add</mat-hint> <!-- Hint for New Criteria -->
+                                <mat-hint>Enter a criteria and click add</mat-hint> <!-- Hint for New Criteria -->
                             </mat-form-field>
                             <mat-icon style="cursor: pointer; font-size: 33px; color: #324395;"
                                 (click)="addCriteria(newCriteria); newCriteria=''">add_box</mat-icon>
@@ -303,15 +312,17 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 </div>
 
                 <div class="sm-row-box-rkScale">
-                  <div>
-                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
-                    <br>
-                    <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
+                    <div>
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
+                        <br>
+                        <div
+                            style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
 
-                        <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="10">
-                        {{rankingScaleValue}}
+                            <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
+                                max="10">
+                            {{rankingScaleValue}}
+                        </div>
                     </div>
-                </div>
 
                     <div style="    margin-top: 0.5rem;
         ">
@@ -489,7 +500,8 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
                                 (mouseleave)="selectedColumn = ''">
                                 <span class="header-delete-icon" matTooltip="double click to delete column"
-                                    matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
+                                    matTooltipPosition="above"
+                                    (dblclick)="openDialog('delete column', columnName)">x</span>
                                 <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
                                 <mat-icon style="cursor: pointer;"
