--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -165,7 +165,7 @@
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
 
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column"
+        <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera()" class="add-column"
             matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
@@ -248,7 +248,7 @@
       <div style="display: flex; justify-content: center; align-items: center;">
         <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
           <mat-label>Copy & Paste TEST NAMES</mat-label>
-          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
+          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"
               placeholder="Paste test names here" cdkTextareaAutosize
               cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
           <mat-hint>Type or paste the test names here that you want to include</mat-hint>
@@ -355,6 +355,72 @@
   </div>
 </div>
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧END CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
+<!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
+<div *ngIf="uploadImagesBox" class="mat-elevation-z4" cdkDrag
+    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: lightgrey 3px solid;">
+    <div style="position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #ccc;
+    cursor: move;
+    width: 1024px;
+    height: 54px;" cdkDragHandle> </div>
+    <div style="text-align: center;">
+        <div style="font-size: 16px;margin: 20px;color: #48535e;">UPLOAD IMAGES</div>
+        <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+    </div>
+    <hr>
+    <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 30px;">
+    </div>
+
+    <!-- IMAGE UPLOADER CODE -->
+    <div style="display: flex;flex-direction: row;justify-content: space-between;gap: 30px;">
+        <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
+            multiple accept="image/*">
+
+
+        <button mat-raised-button style="background-color: #003180;color:white;margin: -3px -173px 0px 29px;"
+            (click)="fileUpload.click()">
+            Select files to upload
+        </button>
+        <button *ngIf="IMAGES_UPLOADED.length > 0" mat-raised-button
+            style="background-color: #ee7f25;color:white; margin-right: 33px;" (click)="uploadAllImages()">
+            Upload Files
+        </button>
+    </div>
+    <div style="display: flex;flex-direction: row; gap:10; padding-top: 10px;">
+
+        <div class="template-list" [dragula]="'draggableBag'" [(dragulaModel)]="IMAGES_UPLOADED"
+            style="display: flex;flex-direction: column; overflow-y: scroll;width: 100%;justify-content: center;">
+            <div *ngFor="let template of IMAGES_UPLOADED; let imgIndex = index" [ngClass]="(imgIndex%2==0)?'red':'blue'"
+                class="image-row">
+
+                <div class="image-cell">
+                    <div style="font-size: 25px;color: #003180;width: 40px;">{{imgIndex + 1}}</div>
+                    <img [src]="template.FileContent" [width]="logoWidth">
+                </div>
+
+                <input type="text" [value]="template.FileName">
+                <p>{{template.FileType}}</p>
+                <button (dblclick)="deleteImage(imgIndex)" mat-icon-button style="background-color: #ffffff;"
+                    matTooltip="double click to delete " matTooltipPosition="above">
+                    <mat-icon style="color: #e20000;">delete</mat-icon>
+                </button>
+
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div
+        style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button
+            (click)="uploadImagesBox = false" aria-label="ranking">
+            <mat-icon>cancel</mat-icon><br>Cancel
+        </button>
+    </div>
+</div>
+<!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 END UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
 
 
 <!-- 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 UPLOAD IMAGES BOX 👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧👩🏽‍🔧 -->
@@ -374,23 +440,23 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
     <!-- Cards Test Name-->
     <mat-card class="example-card">
-        <mat-card-header>
-            <mat-card-title>Test Names</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <div style="text-align: center;">
-                <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
-                <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-            </div>
-            <div style="display: flex; justify-content: center; align-items: center;">
-                <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-                    <mat-label>Copy & Paste TEST NAMES</mat-label>
-                    <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-                        placeholder="Paste test names here" cdkTextareaAutosize cdkAutosizeMinRows="2"
-                        cdkAutosizeMaxRows="5"></textarea>
-                    <mat-hint>Type or paste the test names here that you want to include</mat-hint>
-                </mat-form-field>
-            </div>
+      <mat-card-header>
+        <mat-card-title>Test Names</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div style="text-align: center;">
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+      </div>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
+          <mat-label>Copy & Paste TEST NAMES</mat-label>
+          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"
+              placeholder="Paste test names here" cdkTextareaAutosize
+              cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
+          <mat-hint>Type or paste the test names here that you want to include</mat-hint>
+        </mat-form-field>
+      </div>
 
         </mat-card-content>
 
