--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -158,7 +158,7 @@
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column"
+        <button (click)="selectedIndex = i; editSingleTableCells = false; verifyCritera(); verifyCritera()" class="add-column"
             matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
@@ -185,19 +185,19 @@
           <mat-card-title>Test Names</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-          <div style="text-align: center;">
-              <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
-              <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
-          </div>
-          <div style="display: flex; justify-content: center; align-items: center;">
-              <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
-                  <mat-label>Copy & Paste TEST NAMES</mat-label>
-                  <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()"
-                      placeholder="Paste test names here" cdkTextareaAutosize cdkAutosizeMinRows="2"
-                      cdkAutosizeMaxRows="5"></textarea>
-                  <mat-hint>Type or paste the test names here that you want to include</mat-hint>
-              </mat-form-field>
-          </div>
+        <div style="text-align: center;">
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
+          <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
+      </div>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <mat-form-field style="width: 90%; margin-left: 20px;" appearance="outline">
+          <mat-label>Copy & Paste TEST NAMES</mat-label>
+          <textarea matInput [(ngModel)]="testNamesInput" (paste)="onPaste()" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"
+              placeholder="Paste test names here" cdkTextareaAutosize
+              cdkAutosizeMinRows="2" cdkAutosizeMaxRows="5"></textarea>
+          <mat-hint>Type or paste the test names here that you want to include</mat-hint>
+        </mat-form-field>
+      </div>
 
       </mat-card-content>
 
