--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -43,17 +43,19 @@
           style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
           Welcome {{userFullName}}
           <br>
-          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.1</span>
+          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.0</span>
         </div>
       </div>
     </div>
     <div class="movil">
 
       <div class="menu-container">
-        <div class="menu-item-Light  directionProjectList" [ngClass]=""(click)="navigateTo('dashboard')">
+        <div class="menu-item-Light  directionProjectList" [ngClass]="" (click)="navigateTo('dashboard')">
           <i class="bi bi-list-task"></i> Project List
         </div>
-        <div class="menu-item-Dark" [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}" style="justify-content: flex-start;" (click)="navigateTo('project-information')">
+        <div class="menu-item-Dark"
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"
+          style="justify-content: flex-start;" (click)="navigateTo('project-information')">
           <i class="bi bi-pencil-fill"></i> Create/Edit Matrix
           <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
@@ -85,7 +87,7 @@
           style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
           Welcome {{userFullName}}
           <br>
-          Role: {{userRole}} <span style="font-size: 10px;">v 1.0.1</span>
+          Role: {{userRole}}
         </div>
       </div>
     </div>
@@ -95,14 +97,20 @@
         <div class="menu-item-Dark directionProjectList" (click)="navigateTo('dashboard')">
           <i class="bi bi-list-task"></i> Project List
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"  (click)="navigateTo('project-information')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'project-information', 'menu-item-Dark': selectedMenuItem !== 'project-information'}"
+          (click)="navigateTo('project-information')">
           Project Information
         </div>
 
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC', 'menu-item-Dark': selectedMenuItem !== 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC'}"  (click)="navigateTo('bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC', 'menu-item-Dark': selectedMenuItem !== 'bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC'}"
+          (click)="navigateTo('bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC')">
           Survey Creation & Design
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants', 'menu-item-Dark': selectedMenuItem !== 'participants'}" (click)="navigateTo('participants')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants', 'menu-item-Dark': selectedMenuItem !== 'participants'}"
+          (click)="navigateTo('participants')">
           Participants
           <div class="video-container">
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
@@ -112,7 +120,9 @@
             </button>
           </div>
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants-emails', 'menu-item-Dark': selectedMenuItem !== 'participants-emails'}" (click)="navigateTo('participants-emails')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'participants-emails', 'menu-item-Dark': selectedMenuItem !== 'participants-emails'}"
+          (click)="navigateTo('participants-emails')">
           Survey Participants/Email <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
@@ -121,7 +131,9 @@
             </button>
           </div>
         </div>
-        <div [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}" (click)="navigateTo('reports')">
+        <div
+          [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}"
+          (click)="navigateTo('reports')">
           Reports <div>
             <button (click)="CREATION_VIDEO_PATH='assets/videos/participants.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
@@ -138,14 +150,18 @@
         <i class="bi bi-arrow-left-circle"></i>
         BACK
       </div> -->
+        <div class="menu-item-Dark directionProjectList" (click)="navigateTo('templates')">
+          <i class="bi bi-list-task"></i>Templates
+        </div>
       </div>
     </div>
   </div>
 
-  <button class="no-print" *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView"
-    style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;" (click)="toggleMenu()"
-    mat-icon-button matTooltip="preview" matTooltipPosition="above">
-    <mat-icon class="full-icon" style="font-size: 35px;">visibility
+  <button class="hide-button" *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView"
+    
+  (click)="toggleMenu()"
+    mat-icon-button matTooltip="Hide menu" matTooltipPosition="above">
+    <mat-icon class="full-icon" style="font-size: 35px;margin-bottom: 7px;">arrow_back
     </mat-icon>
   </button>
 </div>
