--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -199,7 +199,7 @@
                 <button class="no-print" *ngIf="globalProjectName.length > 0"
                     style="position: relative;z-index: 9999999999; left: 20px;;outline: none; bottom: 15px;"
                     mat-raised-button class="project-name-global">
-                    PROJECT: {{globalProjectName}}
+                    PROJECT: {{globalDisplayName != ''? globalDisplayName: globalProjectName}}
                 </button>
             </div>
         </div>
