--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -235,9 +235,8 @@
   background-size: cover;
   background-image: url(../../assets/img/toolbarBg.jpg);
   height: 53px;
-  position: absolute;
-
-  width: 100%;
+  position: fixed;
+  width: 940px;
   z-index: 9999;
   border-radius: 5px;
 }
@@ -247,9 +246,8 @@
   background-size: cover;
   background-image: url(../../assets/img/toolbarBg.jpg);
   height: 53px;
-  position: absolute;
-
-  width: 100%;
+  position: fixed;
+  width: 1260px;
   z-index: 9999;
   border-radius: 5px;
 }
@@ -276,10 +274,10 @@
   background-color: white;
   width: 300px;
   max-width: 313px;
-  height: 552px;
+  height: 535px;
   position: relative;
   right: 52px;
-  top: 134px;
+  top: 191px;
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 10px;
@@ -289,10 +287,10 @@
   background-color: white;
   width: 300px;
   max-width: 313px;
-  height: 552px;
+  height: 535px;
   position: relative;
   right: -267px ;
-  top: 134px;
+  top: 191px;
   overflow-x: hidden;
   overflow-y: scroll;
   padding: 10px;
@@ -383,9 +381,25 @@
   outline: none;
 }
 
+.name-title-wide{
+  color: white;
+  font-size: 30px;
+  font-family: Arial;
+  right: -707px;
+  cursor: pointer;
+}
+
+.name-title{
+  color: white;
+  font-size: 30px;
+  font-family: Arial;
+  right: -382px;
+  cursor: pointer;
+}
+
 .name-form {
   position: relative;
-  top: 133px;
+  top: 191px;
   width: 300px;
   background-color: white;
   height: 90px;
@@ -397,7 +411,7 @@
 
 .name-form-wide {
   position: relative;
-  top: 133px;
+  top: 187px;
   width: 300px;
   background-color: white;
   height: 90px;
@@ -889,7 +903,7 @@ mat-tab-group ::-webkit-scrollbar {
   right: -1023px;
   outline: none;
   transform: translate(50%, -278px);
-  
+
 }
 
 ::ng-deep .mat-tooltip {
