--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -75,21 +75,32 @@
 }
 
 .page-buttons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    justify-content: flex-end;
-    bottom: 17px;
-    width: 45%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  bottom: 17px;
+  width: 81%;
+  right: 3rem;
+
+  @media (max-width: 712px){
+    width: 95%;
+    right: 1rem;
+  }
+}
+.button-name{
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
 .page-buttons-heigth-minus-50 {
-    display: flex;
+   gap:1px;
+  display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8px;
     position: absolute;
-
+    width: 100%;
+    justify-content: center;
 }
 .page-buttons-heigth-40 {
     display: flex;
@@ -200,4 +211,7 @@
 
 ::ng-deep .mat-button-wrapper{
     font-size: 1vw;
+    @media (max-width: 712px){
+      font-size: 2.5vw;
+    }
  }
