--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -196,11 +196,15 @@
                         <mat-icon class="full-icon">chevron_right</mat-icon>
                     </button>
                 </div>
-                <button class="no-print" *ngIf="globalProjectName.length > 0"
-                    style="position: relative;z-index: 9999999999; left: 20px;;outline: none; bottom: 15px;"
-                    mat-raised-button class="project-name-global">
-                    PROJECT: {{globalProjectName}}
-                </button>
+                <div class="button-name">
+                  <button *ngIf="globalProjectName"
+                          class="no-print project-name-global"
+                          mat-raised-button
+                          style="position: relative; z-index: 9999999999; outline: none;">
+                    PROJECT: {{ globalDisplayName ? globalDisplayName : globalProjectName }}
+                  </button>
+                </div>
+
             </div>
         </div>
 
@@ -370,5 +374,5 @@
         </button>
     </div>
     <mat-icon (click)="isTemplateUpdate = false" style="cursor: pointer;" class="full-icon">close</mat-icon>
-    
+
 </div>
