Fix criteria and templates

--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -13,7 +13,7 @@
   </div>
   <button mat-raised-button color="success" style="    background-color: #063074;
   color: white;
-  width: 40%;;" (click)="saveNewName(true)">Save </button>
+  width: 40%;;" (click)="saveNewName()">Save </button>
 </div>
 
 <div *ngIf="true" class="" style="position: absolute;z-index: 1;width: 120vh;">
